@@ -56,7 +56,7 @@ lazy val plugin = (projectMatrix in file("plugin"))
     },
     scriptedBufferLog := false,
     scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-      Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
+      Seq("-Xmx1024M", "-Dplugin.version=" + version.value)
     },
     buildInfoKeys := Seq[BuildInfoKey](name, version, scalaVersion, sbtVersion),
     buildInfoPackage := "com.eed3si9n.ifdef.sbtifdef",
@@ -99,8 +99,9 @@ ThisBuild / publishTo := {
 }
 ThisBuild / publishMavenStyle := true
 ThisBuild / githubWorkflowPublishTargetBranches := Nil
-ThisBuild / githubWorkflowBuildSbtStepPreamble := List("-v")
+ThisBuild / githubWorkflowBuildSbtStepPreamble := Nil
 ThisBuild / githubWorkflowBuild := List(
   WorkflowStep.Sbt(List("publishLocal")),
   WorkflowStep.Sbt(List("test", "scripted sbt-ifdef/*", "plugin2_12/scripted sbt1/*")),
 )
+ThisBuild / githubWorkflowJavaVersions := List(JavaSpec.zulu("17"))
